--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
     "demo": "node -r ts-node/register src/demo.ts"
   },
   "dependencies": {
-    "@types/node": "^12.7.11",
-    "@types/ramda": "^0.26.26",
+    "@types/node": "^12.11.1",
+    "@types/ramda": "^0.26.33",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
     "ava": "^2.4.0",
     "esm": "^3.0.17",
-    "nodemon": "^1.19.3",
+    "nodemon": "^1.19.4",
+    "prettier": "^1.18.2",
     "ts-node": "^8.4.1",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.4"
   },
   "ava": {
     "compileEnhancements": false,
