Work on custom user context type

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "test": "ava --no-color -v",
-    "demo": "node -r ts-node/register src/demo.ts"
+    "test": "ava --no-color -v"
   },
   "dependencies": {
     "@types/node": "^12.11.1",
