--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "start": "node -r ts-node/register src/demo.ts"
   },
   "dependencies": {
-    "@types/node": "^12.11.1",
-    "@types/ramda": "^0.26.33",
-    "ramda": "^0.26.1"
+    "@types/node": "^12.11.1"
   },
   "devDependencies": {
     "ava": "^2.4.0",
