Prepare for alpha release

--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
+  "name": "hypermachine",
+  "version": "1.0.0-alpha.0",
+  "description": "a webmachine implementation for node in typescript",
+  "license": "BSD-3-Clause",
+  "main": "lib/webmachine.js",
+  "types": "lib/webmachine.d.ts",
   "scripts": {
     "test": "ava -v",
-    "start": "node -r ts-node/register src/demo.ts"
+    "start": "node -r ts-node/register src/demo.ts",
+    "build": "tsc",
+    "prepublish": "tsc"
   },
   "dependencies": {
     "@types/node": "^13.11.0"
