--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "prepublish": "tsc"
   },
   "dependencies": {
-    "@types/node": "^14.0.13"
+    "@types/node": "17.0.19"
   },
   "devDependencies": {
-    "ava": "^3.10.1",
+    "ava": "4.0.1",
     "prettier": "^2.0.5",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "ts-node": "10.5.0",
+    "typescript": "4.5.5"
   },
   "ava": {
     "extensions": [
